fix bugs: strip lines when processing new datasets

--- a/search_config/config-hpo-add-rtranse.yaml
+++ b/search_config/config-hpo-add-rtranse.yaml
@@ -52,7 +52,7 @@ model:
 
   embedding:
     global:
-      dim: 160
+      dim: 128
       init: xavier_uniform
 
     entity:
@@ -96,7 +96,7 @@ train:
   type: negative_sampling
 
   loss:
-    type: binary_cross_entropy_loss
+    type: cross_entropy_loss
     args: ~
 
   max_epochs: 100
@@ -128,7 +128,7 @@ train:
   optimizer:
     type: Adam
     args:
-      lr: 0.001
+      lr: 0.00113831256758030
 
     default:
       type: Adam           # sgd, adagrad, adam
@@ -147,7 +147,7 @@ train:
       args: ~
     temporal_reg:
       type: n3_regularize
-      weight: 0.01
+      weight: 0.08560389643535019
       args: ~
   inplace_regularizer: ~
 
@@ -178,49 +178,51 @@ hpo:
   num_trials: 60
   num_random_trials: 20
   hyperparam:
-    - name: model.embedding.global.dim
+#    - name: model.embedding.global.dim
+#      type: choice
+#      values: [512, 256, 128, 100, 64]
+#      value_type: int
+#    - name: train.regularizer.temporal_reg.weight
+#      type: range
+#      bounds: [0.0, 0.1]
+#      value_type: float
+#    - name: train.optimizer.args.lr
+#      type: range
+#      bounds: [0.0000001, 0.01]
+#      value_type: float
+#    - name: model.fusion.p
+#      type: choice
+#      values: [0.0, 0.2, 0.4, 0.5, 0.6]
+#      value_type: float
+#    - name: task.reciprocal_training
+#      type: choice
+#      values: [true, false]
+#      value_type: bool
+#    - name: train.loss.type
+#      type: choice
+#      values: ['binary_cross_entropy_loss', 'cross_entropy_loss']
+#      value_type: str
+
+    # phase2
+    - name: model.embedding.global.init
       type: choice
-      values: [512, 256, 128, 100, 64]
-      value_type: int
-#    - name: model.embedding.global.init
-#      type: choice
-#      values: ['xavier_uniform', 'xavier_normal']
-#      value_type: str
-#    - name: train.regularizer.entity_reg.type
-#      type: choice
-#      values: ['f2_regularize', 'lambda3_regularize']
-#      value_type: str
-#    - name: train.regularizer.entity_reg.weight
-#      type: range
-#      bounds: [0.0, 0.1]
-#      value_type: float
-#    - name: train.regularizer.relation_reg.type
-#      type: choice
-#      values: ['f2_regularize', 'lambda3_regularize']
-#      value_type: str
-#    - name: train.regularizer.relation_reg.weight
-#      type: range
-#      bounds: [0.0, 0.1]
-#      value_type: float
-    - name: train.regularizer.temporal_reg.weight
+      values: ['xavier_uniform', 'xavier_normal']
+      value_type: str
+    - name: train.regularizer.entity_reg.type
+      type: choice
+      values: ['f2_regularize', 'lambda3_regularize']
+      value_type: str
+    - name: train.regularizer.entity_reg.weight
       type: range
       bounds: [0.0, 0.1]
       value_type: float
-    - name: train.optimizer.args.lr
-      type: range
-      bounds: [0.0000001, 0.01]
-      value_type: float
-    - name: model.fusion.p
+    - name: train.regularizer.relation_reg.type
       type: choice
-      values: [0.0, 0.2, 0.4, 0.5, 0.6]
-      value_type: float
-    - name: task.reciprocal_training
-      type: choice
-      values: [true, false]
-      value_type: bool
-    - name: train.loss.type
-      type: choice
-      values: ['binary_cross_entropy_loss', 'cross_entropy_loss']
+      values: ['f2_regularize', 'lambda3_regularize']
       value_type: str
+    - name: train.regularizer.relation_reg.weight
+      type: range
+      bounds: [0.0, 0.1]
+      value_type: float
 
 
