--- a/search_config1114/config-hpo-de-simple.yaml
+++ b/search_config1114/config-hpo-de-simple.yaml
@@ -21,7 +21,7 @@ random_seed:
 
 # local
 dataset:
-  folder: /home/ubuntu/gengyuan/tkg-framework/data/icews14
+  folder: /home/ubuntu/gengyuan/tkg-framework/data/icews11-14
 
   # indexes mapping [false, true]
   # TODO 可以保存到cache
@@ -31,10 +31,9 @@ dataset:
     resolution: "day"
     index: False
     float: True
-    gran: 3
   args: ~
 
-  name: 'icews14_atise'
+  name: 'icews11-14'
   num_entities: -1
   num_relations: -1
   pickle: True
@@ -49,7 +48,9 @@ negative_sampling:
 
 
 model:
-  type: atise_pipeline_dropout_model
+  type: de_pipeline_dropout_model
+
+  p: 0.4
 
   embedding:
     global:
@@ -59,54 +60,53 @@ model:
     entity:
       pos_aware: True
       keys:
-        emb:
-          dim: 160
+        ent_embs:
+          dim: 108
           init: xavier_uniform
-        emb_T:
-          dim: 160
+        amps_y:
+          dim: 52
           init: xavier_uniform
-        alpha:
-          dim: 1
+        amps_m:
+          dim: 52
           init: xavier_uniform
-        beta:
-          dim: 160
+        amps_d:
+          dim: 52
           init: xavier_uniform
-        omega:
-          dim: 160
+        freq_y:
+          dim: 52
           init: xavier_uniform
-        var:
-          dim: 160
+        freq_m:
+          dim: 52
+          init: xavier_uniform
+        freq_d:
+          dim: 52
+          init: xavier_uniform
+        phi_y:
+          dim: 52
+          init: xavier_uniform
+        phi_m:
+          dim: 52
+          init: xavier_uniform
+        phi_d:
+          dim: 52
           init: xavier_uniform
     relation:
       keys:
-        emb:
+        real:
           dim: 160
           init: xavier_uniform
-          emb_T:
-            dim: 160
-            init: xavier_uniform
-          alpha:
-            dim: 1
-            init: xavier_uniform
-          beta:
-            dim: 160
-            init: xavier_uniform
-          omega:
-            dim: 160
-            init: xavier_uniform
-          var:
-            dim: 160
-            init: xavier_uniform
     temporal: ~
   fusion:
-    type: atise_fusion
+    type: diachronic_entity_fusion
     target:
       - 'ent+temp'
-      - 'rel+temp'
+    l1_flag: True
     p: 0.4
+    emb_dim: 160
+    se: 0.32
     args: ~
   transformation:
-    type: translation_tf
+    type: distmult_tf
     gamma: 100
     p: 1
     range: 10
@@ -129,6 +129,7 @@ train:
 
   max_epochs: 100
 
+
   loader:
     num_workers: 0
     pin_memory: False
@@ -138,7 +139,7 @@ train:
   valid:
     split: test # in [test or valid]
     every: 5
-    batch_size: 512
+    batch_size: 64
     subbatch_size: -1
     filter: time-aware  # in [off, static, time-aware]
     ordering: optimistic    # in [optimistic, peesimistic]
@@ -148,10 +149,10 @@ train:
       early_stop: True
       patience: 30
       epochs: 50
-      metric_thresh: 0.2
+      metric_thresh: 0.1
 
   batch_size: 512
-  subbatch_size: -1
+  subbatch_size: 64
   subbatch_adaptive: True
   optimizer:
     type: Adam
@@ -173,6 +174,10 @@ train:
       type: none_regularize
       weight: 0.0
       args: ~
+#    temporal_reg:
+#      type: no_regularize
+#      weight: 0.01
+#      args: ~
   inplace_regularizer: ~
 
   lr_scheduler: ""
@@ -183,7 +188,7 @@ train:
   trace_level: epoch           # batch, epoch
 
   checkpoint:
-    every: 100
+    every: 50
     keep: 3
 
   auto_correct: False
@@ -200,20 +205,28 @@ eval:
 hpo:
   num_workers: -1
   num_trials: 80
-  num_random_trials: 30
+  num_random_trials: 36
   hyperparam:
     - name: model.embedding.global.dim
       type: choice
       values: [1024, 512, 256, 128, 100, 64]
       value_type: int
+#    - name: train.batch_size
+#      type: choice
+#      values: [256, 512, 1024]
+#      value_type: int
     - name: train.optimizer.args.lr
       type: range
       bounds: [0.0000001, 0.01]
       value_type: float
-    - name: model.fusion.p
-      type: choice
-      values: [0.0, 0.2, 0.4, 0.5, 0.6]
+    - name: model.fusion.se
+      type: range
+      bounds: [0.0, 1.0]
       value_type: float
+    - name: model.embedding.global.init
+      type: choice
+      values: ['xavier_uniform', 'xavier_normal']
+      value_type: str
     - name: task.reciprocal_training
       type: choice
       values: [true, false]
@@ -222,9 +235,13 @@ hpo:
       type: choice
       values: ['binary_cross_entropy_loss', 'cross_entropy_loss']
       value_type: str
+    - name: model.fusion.p
+      type: choice
+      values: [0.0, 0.2, 0.4, 0.5, 0.6]
+      value_type: float
 #    - name: train.regularizer.entity_reg.type
 #      type: choice
-#      values: ['n3_regularize', 'f2_regularize']
+#      values: ['none_regularize', 'f2_regularize']
 #      value_type: str
 #    - name: train.regularizer.entity_reg.weight
 #      type: range
@@ -232,12 +249,17 @@ hpo:
 #      value_type: float
 #    - name: train.regularizer.relation_reg.type
 #      type: choice
-#      values: ['n3_regularize', 'f2_regularize']
+#      values: ['none_regularize', 'f2_regularize']
 #      value_type: str
 #    - name: train.regularizer.relation_reg.weight
 #      type: range
 #      bounds: [0.0, 0.1]
 #      value_type: float
+#    - name: train.regularizer.temporal_reg.weight
+#      type: range
+#      bounds: [0.0, 0.1]
+#      value_type: float
+
 
 
 
