--- a/search_config1114/config-hpo-extended-bochner-rtranse.yaml
+++ b/search_config1114/config-hpo-extended-bochner-rtranse.yaml
@@ -9,7 +9,7 @@ task:
   folder: /home/ubuntu/gengyuan/search_experiments
   type: train
   device: 'cuda'
-  reciprocal_training: true
+  reciprocal_training: True
 
 random_seed:
   default: -1
@@ -29,12 +29,11 @@ dataset:
   filter: False
   temporal:
     resolution: "day"
-    index: False
-    float: True
-    gran: 3
+    index: True
+    float: False
   args: ~
 
-  name: 'icews14_atise'
+  name: 'icews14'
   num_entities: -1
   num_relations: -1
   pickle: True
@@ -49,61 +48,36 @@ negative_sampling:
 
 
 model:
-  type: atise_pipeline_dropout_model
+  type: extended_bochner_pipeline_dropout_model
 
   embedding:
     global:
-      dim: 160
+      dim: 128
       init: xavier_uniform
-
+      t_min: 1
+      t_max: 365
     entity:
       pos_aware: True
       keys:
-        emb:
-          dim: 160
+        real:
+          dim: 128
           init: xavier_uniform
-        emb_T:
-          dim: 160
-          init: xavier_uniform
-        alpha:
-          dim: 1
-          init: xavier_uniform
-        beta:
-          dim: 160
-          init: xavier_uniform
-        omega:
-          dim: 160
-          init: xavier_uniform
-        var:
-          dim: 160
-          init: xavier_uniform
+
     relation:
       keys:
-        emb:
-          dim: 160
+        real:
+          dim: 128
           init: xavier_uniform
-          emb_T:
-            dim: 160
-            init: xavier_uniform
-          alpha:
-            dim: 1
-            init: xavier_uniform
-          beta:
-            dim: 160
-            init: xavier_uniform
-          omega:
-            dim: 160
-            init: xavier_uniform
-          var:
-            dim: 160
-            init: xavier_uniform
-    temporal: ~
+    temporal:
+      keys:
+        real:
+          dim: 1600 # should have no effect
+          init: xavier_uniform
   fusion:
-    type: atise_fusion
+    type: addition_fusion
     target:
-      - 'ent+temp'
       - 'rel+temp'
-    p: 0.4
+    p: 0.0
     args: ~
   transformation:
     type: translation_tf
@@ -117,7 +91,6 @@ model:
   args: ~
 
 
-
 train:
   # Split used for training (specified under 'data.files').
   split: train
@@ -128,6 +101,7 @@ train:
     args: ~
 
   max_epochs: 100
+
 
   loader:
     num_workers: 0
@@ -158,11 +132,6 @@ train:
     args:
       lr: 0.001
 
-    default:
-      type: Adam           # sgd, adagrad, adam
-
-      args:
-        +++: +++
 
   regularizer:
     entity_reg:
@@ -199,20 +168,40 @@ eval:
 
 hpo:
   num_workers: -1
-  num_trials: 80
-  num_random_trials: 30
+  num_trials: 60
+  num_random_trials: 20
   hyperparam:
     - name: model.embedding.global.dim
       type: choice
-      values: [1024, 512, 256, 128, 100, 64]
+      values: [2048, 1024, 512, 256, 128, 64]
       value_type: int
+    - name: model.embedding.global.init
+      type: choice
+      values: ['xavier_uniform', 'xavier_normal']
+      value_type: str
+#    - name: train.regularizer.entity_reg.type
+#      type: choice
+#      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
+#      value_type: str
+#    - name: train.regularizer.entity_reg.weight
+#      type: range
+#      bounds: [0.0, 0.1]
+#      value_type: float
+#    - name: train.regularizer.relation_reg.type
+#      type: choice
+#      values: ['none_regularize', 'f2_regularize', 'lambda3_regularize']
+#      value_type: str
+#    - name: train.regularizer.relation_reg.weight
+#      type: range
+#      bounds: [0.0, 0.1]
+#      value_type: float
     - name: train.optimizer.args.lr
       type: range
       bounds: [0.0000001, 0.01]
       value_type: float
     - name: model.fusion.p
       type: choice
-      values: [0.0, 0.2, 0.4, 0.5, 0.6]
+      values: [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6]
       value_type: float
     - name: task.reciprocal_training
       type: choice
@@ -222,22 +211,3 @@ hpo:
       type: choice
       values: ['binary_cross_entropy_loss', 'cross_entropy_loss']
       value_type: str
-#    - name: train.regularizer.entity_reg.type
-#      type: choice
-#      values: ['n3_regularize', 'f2_regularize']
-#      value_type: str
-#    - name: train.regularizer.entity_reg.weight
-#      type: range
-#      bounds: [0.0, 0.1]
-#      value_type: float
-#    - name: train.regularizer.relation_reg.type
-#      type: choice
-#      values: ['n3_regularize', 'f2_regularize']
-#      value_type: str
-#    - name: train.regularizer.relation_reg.weight
-#      type: range
-#      bounds: [0.0, 0.1]
-#      value_type: float
-
-
-
